--- a/src/app/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/pagina-inicial/pagina-inicial.component.html
@@ -14,23 +14,19 @@
     <div class="logo my-3" style="background-image: url(/assets/img/Logo_Heineken-Zero.png)"></div>
     <h2 class="text-center mb-4">Vamos ver sua identificação</h2>
     <h3 class="text-center mb-4">Entre com sua data de nascimento:</h3>
-    <h3 class="text-center text-danger mb-4">Idade não corresponde a promoção</h3>
+    <h3 class="text-center text-danger mb-4" [hidden]="messageError == ''">{{messageError}}</h3>
   </div>
 
-  <div >
     <mat-form-field appearance="fill" class="example-form-field">
-      <mat-label>Choose a date</mat-label>
+      <mat-label>Data de Nascimento</mat-label>
       <input matInput [matDatepicker]="datepicker" [(ngModel)]="birthday">
       <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
       <mat-datepicker #datepicker>
-        <mat-datepicker-actions>
-          <button mat-button matDatepickerCancel>Cancel</button>
-          <button mat-raised-button color="primary" matDatepickerApply (click)="goToRules()">Apply</button>
-        </mat-datepicker-actions>
+      <mat-datepicker-actions>
+        <button mat-raised-button color="primary" matDatepickerApply (click)="goToRules()">Apply</button>
+      </mat-datepicker-actions>
       </mat-datepicker>
-    </mat-form-field>
-    
-  </div>
+    </mat-form-field>    
 
   <div class="logo" style="background-image: url(/assets/img/AgoraVocePodeHeineken.png)"></div>
 
